# python-cookiecutter

./: .gitignore  README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.repo_name}}/: .coveragerc  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  setup.cfg
{{cookiecutter.repo_name}}/tests/: test_{{cookiecutter.package_name}}.py
{{cookiecutter.repo_name}}/{{cookiecutter.package_name}}/: __main__.py
