[tool.poetry]
name = "{{cookiecutter.repo_name}}"
version = "{{cookiecutter.initial_project_version}}"
description = "{{cookiecutter.project_description}}"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]
license = "{{cookiecutter.license}}"

[tool.poetry.dependencies]
python = "^{{cookiecutter.python_version}}"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
